--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-image-fallback": "^8.0.0",
     "react-scripts": "2.1.5",
     "semantic-ui-css": "^2.4.1"
   },
