--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-image-fallback": "^8.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
-    "semantic-ui-css": "^2.4.1"
+    "semantic-ui-css": "^2.4.1",
+    "validator": "^10.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
